test/parser/module/missing_module_error.exp
Error: File must start with a module declaration. Found `1` but expected `module`.
test/parser/module/missing_module_error.myte:1:0
 1 | 1;
   | ^